--- a/customer-gallery.css
+++ b/customer-gallery.css
@@ -4,6 +4,17 @@
     margin: 50px 0;
     background: #f5f5f5;
     padding: 30px 0;
+    padding-top: 10px;
+}
+
+.gallery-title {
+    text-align: center;
+    h2 {
+        font-size: 32px;
+        color: #333;
+        font-weight: bold;
+        margin: 0;
+    }
 }
 
 /* Carousel wrapper */
