--- a/customer-gallery.css
+++ b/customer-gallery.css
@@ -12,7 +12,7 @@
         font-size: 32px;
         color: #333;
         font-weight: bold;
-        margin: 0;
+        margin: 10px 0;
     }
 }
 
