--- a/servis-plus.css
+++ b/servis-plus.css
@@ -9,6 +9,7 @@
 
         .servis-plus-badge:hover {
             transform: scale(1.1);
+            cursor: pointer;
         }
 
         .servis-plus-icon {
